# nit-builder

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  env.d.ts  eslint.config.js  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
app/: entry.server.tsx  root.tsx  routes.ts
docs/: launch-post.md  lm-studio-guide.md
scripts/: appwrite-migrate.ts  deploy-nit.sh  evalTrend.ts  nginx.nit.vibecoding.by.conf  runEval.ts  runHtmlSmoke.ts
shared/: package.json  tsconfig.json
tests/: adminAuth.test.ts  api.admin.guest-limits.cleanup.test.ts  api.auth.login.test.ts  api.auth.routes.test.ts  auth.test.ts  authContext.test.ts  bm25.test.ts  compactPlanFormat.test.ts  constrainedPlanGen.test.ts  contextualEmbed.test.ts  continuation.test.ts  cssPatch.test.ts  designTokens.test.ts  embeddingPrefix.test.ts  eval-metrics.test.ts  evalReport.test.ts  extendedTriggers.test.ts  extractTargetSections.test.ts  feedbackIngest.test.ts  feedbackStore.test.ts  fewShotBuilder.test.ts  guestLimit.test.ts  htmlDigest.test.ts  htmlOrchestrator.test.ts  htmlOrchestratorBarrel.test.ts  htmlPrompts.test.ts  htmlRepair.test.ts  htmlSmoke.test.ts  htmlTemplatesCatalog.test.ts  (+35 more)
tunnel/desktop/src-tauri/: Cargo.toml  tauri.conf.json
tunnel/desktop/src-tauri/capabilities/: default.json
tunnel/desktop/src-tauri/icons/: icon.icns
tunnel/desktop/src-tauri/src/: lib.rs  lm_studio.rs  main.rs  protocol.rs  tunnel.rs
(+196 files in other folders)
